Adding in server side support for MySQL connectivity troubleshooting.